--- a/src/fxml/AddNode.fxml
+++ b/src/fxml/AddNode.fxml
@@ -188,7 +188,7 @@
                                                                   <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
                                                                </GridPane.margin>
                                                             </JFXButton>
-                                                            <Label text="Select Nodes to Remove" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
+                                                            <Label fx:id="nodeRemoveLabel" text="Select Nodes to Remove" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
                                                                <font>
                                                                   <Font size="24.0" />
                                                                </font>
