--- a/src/fxml/AddNode.fxml
+++ b/src/fxml/AddNode.fxml
@@ -354,12 +354,12 @@
                                                           <RowConstraints minHeight="90.0" prefHeight="30.0" vgrow="NEVER" />
                                                         </rowConstraints>
                                                          <children>
-                                                            <Label text="Select First Node" GridPane.columnSpan="2" GridPane.halignment="CENTER">
+                                                            <Label fx:id="edgeAddNodeOne" text="Select First Node" GridPane.columnSpan="2" GridPane.halignment="CENTER">
                                                                <font>
                                                                   <Font size="25.0" />
                                                                </font>
                                                             </Label>
-                                                            <Label text="Select Second Node" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                                            <Label fx:id="edgeAddNodeTwo" text="Select Second Node" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                                                                <font>
                                                                   <Font size="25.0" />
                                                                </font>
@@ -405,7 +405,7 @@
                                                           <RowConstraints minHeight="90.0" prefHeight="30.0" vgrow="NEVER" />
                                                         </rowConstraints>
                                                          <children>
-                                                            <Label text="Select Edges to Remove" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
+                                                            <Label fx:id="edgeRemoveLabel" text="Select Edges to Remove" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
                                                                <font>
                                                                   <Font size="24.0" />
                                                                </font>
