--- a/src/fxml/FoodDelivery.fxml
+++ b/src/fxml/FoodDelivery.fxml
@@ -14,28 +14,27 @@
    <children>
       <GridPane prefHeight="150.0" prefWidth="1279.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" />
+          <ColumnConstraints hgrow="NEVER" maxWidth="500.0" minWidth="10.0" prefWidth="500.0" />
+          <ColumnConstraints hgrow="NEVER" maxWidth="500.0" minWidth="10.0" prefWidth="500.0" />
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXTextField fx:id="alergiesTextFiled" alignment="CENTER" labelFloat="true" promptText="Allergies" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <font>
-                  <Font size="24.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="250.0" right="250.0" />
-               </GridPane.margin>
-            </JFXTextField>
-            <ChoiceBox fx:id="foodChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-            <Label text="Entrée" GridPane.halignment="CENTER">
+            <ChoiceBox fx:id="foodChoiceBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+            <Label text="Entrée" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
+            <JFXTextField fx:id="alergiesTextFiled" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="80.0" right="80.0" />
+               </GridPane.margin>
+            </JFXTextField>
          </children>
       </GridPane>
    </children>
