--- a/src/fxml/Translation.fxml
+++ b/src/fxml/Translation.fxml
@@ -14,28 +14,27 @@
     <children>
         <GridPane prefHeight="186.0" prefWidth="1279.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="500.0" minWidth="10.0" prefWidth="500.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="500.0" minWidth="10.0" prefWidth="500.0" />
+            <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <JFXTextField fx:id="durationTextFiled" labelFloat="true" promptText="Duration (Min)" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
-                    <font>
-                        <Font size="20.0" />
-                    </font>
-                    <GridPane.margin>
-                        <Insets left="250.0" right="250.0" />
-                    </GridPane.margin>
-                </JFXTextField>
-                <ChoiceBox fx:id="languageChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-            <Label text="Language" GridPane.halignment="CENTER">
+                <ChoiceBox fx:id="languageChoiceBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+            <Label text="Language" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
+            <JFXTextField fx:id="durationTextFiled" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="80.0" right="80.0" />
+               </GridPane.margin>
+            </JFXTextField>
             </children>
         </GridPane>
     </children>
