--- a/src/fxml/Login.fxml
+++ b/src/fxml/Login.fxml
@@ -23,6 +23,7 @@
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
           <RowConstraints vgrow="NEVER" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
         </rowConstraints>
          <children>
@@ -36,12 +37,12 @@
                         <Insets bottom="40.0" />
                      </padding>
                   </Label>
-                  <JFXTextField fx:id="usernameField" focusColor="WHITE" labelFloat="true" prefHeight="51.0" prefWidth="241.0" promptText="Username" styleClass="text-on-dark" unFocusColor="#bfbfbf">
+                  <JFXTextField fx:id="usernameField" focusColor="WHITE" labelFloat="true" onKeyPressed="#enterPressedkey" prefHeight="51.0" prefWidth="241.0" promptText="Username" styleClass="text-on-dark" unFocusColor="#bfbfbf">
                      <font>
                         <Font size="23.0" />
                      </font>
                   </JFXTextField>
-                  <JFXPasswordField fx:id="passwordField" focusColor="WHITE" promptText="Password" styleClass="text-on-dark" unFocusColor="#c9c9c9">
+                  <JFXPasswordField fx:id="passwordField" focusColor="WHITE" onKeyPressed="#enterPressedkey" promptText="Password" styleClass="text-on-dark" unFocusColor="#c9c9c9">
                      <font>
                         <Font size="23.0" />
                      </font>
@@ -49,7 +50,7 @@
                         <Insets bottom="20.0" top="20.0" />
                      </VBox.margin>
                   </JFXPasswordField>
-                  <JFXButton fx:id="enterButton" alignment="CENTER" onAction="#enterPressed" text="Enter">
+                  <JFXButton fx:id="enterButton" alignment="CENTER" onAction="#enterPressed" onKeyPressed="#enterPressedkey" text="Enter">
                      <font>
                         <Font size="33.0" />
                      </font>
@@ -62,6 +63,11 @@
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </padding>
             </VBox>
+            <Label fx:id="errorLbl" textFill="RED" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
       <JFXButton fx:id="returnButton" onAction="#returnPressed" text="Return" AnchorPane.rightAnchor="120.0" AnchorPane.topAnchor="60.0">
