--- a/src/fxml/Request.fxml
+++ b/src/fxml/Request.fxml
@@ -175,7 +175,7 @@
                         </AnchorPane>
                     </content>
                   </Tab>
-                  <Tab text="Settings">
+                  <Tab fx:id="settingsTab" text="Settings">
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
@@ -217,7 +217,7 @@
                            </children></AnchorPane>
                     </content>
                   </Tab>
-                  <Tab text="Staff Management">
+                  <Tab fx:id="staffManagementTab" text="Staff Management">
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
