--- a/src/fxml/Request.fxml
+++ b/src/fxml/Request.fxml
@@ -346,50 +346,77 @@
                                       <content>
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                              <children>
-                                                <GridPane prefHeight="562.4" prefWidth="1279.2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                                  <columnConstraints>
-                                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                                  </columnConstraints>
-                                                  <rowConstraints>
-                                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                  </rowConstraints>
-                                                   <children>
-                                                      <Label text="Find Staff To Modify" GridPane.columnIndex="1" GridPane.halignment="CENTER">
-                                                         <font>
-                                                            <Font size="24.0" />
-                                                         </font>
-                                                      </Label>
-                                                      <JFXTextField fx:id="modifyUsername" focusColor="WHITE" labelFloat="true" promptText="Username" unFocusColor="WHITE" GridPane.rowIndex="1">
-                                                         <GridPane.margin>
-                                                            <Insets left="25.0" right="25.0" />
-                                                         </GridPane.margin>
-                                                         <font>
-                                                            <Font size="24.0" />
-                                                         </font>
-                                                      </JFXTextField>
-                                                      <JFXTextField fx:id="modifyID" focusColor="WHITE" labelFloat="true" promptText="Username" unFocusColor="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                                         <font>
-                                                            <Font size="24.0" />
-                                                         </font>
-                                                      </JFXTextField>
-                                                      <JFXTextField focusColor="WHITE" labelFloat="true" promptText="Modify Parameter" unFocusColor="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                                                         <font>
-                                                            <Font size="24.0" />
-                                                         </font>
-                                                         <GridPane.margin>
-                                                            <Insets left="25.0" right="25.0" />
-                                                         </GridPane.margin>
-                                                      </JFXTextField>
-                                                      <ChoiceBox fx:id="choiceboxModifyStaff" prefWidth="150.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-                                                      <JFXButton fx:id="searchButton" onAction="#searchbuttonPressed" prefHeight="50.0" prefWidth="150.0" text="Search" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-                                                      <JFXButton fx:id="makeEditsModify" onAction="#makeModify" prefHeight="50.0" prefWidth="150.0" text="Modify" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-                                                   </children>
-                                                </GridPane>
+                                                <SplitPane dividerPositions="0.40301003344481606" prefHeight="545.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                   <items>
+                                                      <AnchorPane maxWidth="300.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="pane">
+                                                         <children>
+                                                            <GridPane prefHeight="560.8" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                               <columnConstraints>
+                                                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.199951171875" minWidth="10.0" prefWidth="153.0" />
+                                                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="151.0" minWidth="10.0" prefWidth="147.0" />
+                                                               </columnConstraints>
+                                                               <rowConstraints>
+                                                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                               </rowConstraints>
+                                                               <children>
+                                                                  <JFXTextField fx:id="usernameEdit" alignment="CENTER" labelFloat="true" promptText="Username" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                                                                     <GridPane.margin>
+                                                                        <Insets left="15.0" right="15.0" />
+                                                                     </GridPane.margin>
+                                                                     <font>
+                                                                        <Font size="18.0" />
+                                                                     </font>
+                                                                  </JFXTextField>
+                                                                  <JFXButton fx:id="editStaff" onAction="#editStaffPressed" prefHeight="50.0" prefWidth="150.0" text="Edit Staff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+                                                                     <GridPane.margin>
+                                                                        <Insets left="20.0" right="20.0" />
+                                                                     </GridPane.margin>
+                                                                  </JFXButton>
+                                                                  <Label text="Select Staff to Edit" GridPane.columnSpan="2" GridPane.halignment="CENTER">
+                                                                     <font>
+                                                                        <Font size="18.0" />
+                                                                     </font>
+                                                                  </Label>
+                                                                  <JFXTextField fx:id="fullnameEdit" alignment="CENTER" labelFloat="true" promptText="Full Name" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                                                     <GridPane.margin>
+                                                                        <Insets left="10.0" right="10.0" />
+                                                                     </GridPane.margin>
+                                                                     <font>
+                                                                        <Font size="18.0" />
+                                                                     </font>
+                                                                  </JFXTextField>
+                                                                  <JFXTextField fx:id="passwordEdit" alignment="CENTER" labelFloat="true" promptText="Password" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                                                                     <font>
+                                                                        <Font size="18.0" />
+                                                                     </font>
+                                                                     <GridPane.margin>
+                                                                        <Insets left="10.0" right="10.0" />
+                                                                     </GridPane.margin>
+                                                                  </JFXTextField>
+                                                                  <JFXTextField fx:id="jobTitleEdit" alignment="CENTER" labelFloat="true" promptText="Job Title" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                                                                     <GridPane.margin>
+                                                                        <Insets left="15.0" right="15.0" />
+                                                                     </GridPane.margin>
+                                                                     <font>
+                                                                        <Font size="20.0" />
+                                                                     </font>
+                                                                  </JFXTextField>
+                                                               </children>
+                                                            </GridPane>
+                                                         </children>
+                                                      </AnchorPane>
+                                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                                         <children>
+                                                            <ListView fx:id="staffListView1" layoutX="270.0" layoutY="109.0" prefHeight="560.8" prefWidth="971.2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                         </children>
+                                                      </AnchorPane>
+                                                   </items>
+                                                </SplitPane>
                                              </children>
                                           </AnchorPane>
                                       </content>
