--- a/src/fxml/mainAlt.fxml
+++ b/src/fxml/mainAlt.fxml
@@ -13,20 +13,6 @@
       <AnchorPane fx:id="mainAnchorPane" layoutX="-5.0" minHeight="400.0" minWidth="800.0" styleClass="pane">
          <children>
             <StackPane AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="90.0" />
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="280.0">
-               <children>
-                  <JFXButton fx:id="btnzin" onAction="#zinPressed" prefHeight="50.0" prefWidth="50.0" text="+">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </JFXButton>
-                  <JFXButton fx:id="btnzout" onAction="#zoutPressed" prefHeight="50.0" prefWidth="50.0" text="-">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </JFXButton>
-               </children>
-            </VBox>
             <HBox minWidth="600.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="0.0">
                <children>
                   <TitledPane fx:id="nearestDropDown1" contentDisplay="RIGHT" expanded="false" onMousePressed="#clearMousePressed" prefHeight="230.0" text="Filter" visible="true" HBox.hgrow="ALWAYS">
@@ -145,7 +131,7 @@
                   </TitledPane>
                </children>
             </HBox>
-            <GridPane layoutX="10.0" layoutY="190.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <GridPane layoutX="10.0" layoutY="190.0" prefHeight="480.0" prefWidth="85.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
@@ -158,36 +144,56 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <ImageView fitHeight="72.0" fitWidth="79.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/Icons/filter.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="72.0" fitWidth="79.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/Icons/navigation.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="btnlogin" fitHeight="72.0" fitWidth="79.0" onMouseClicked="#loginPressed" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/Icons/lock.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="questionButton" fitHeight="72.0" fitWidth="79.0" onMouseClicked="#questionPressed" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/Icons/help.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="ebtn" fitHeight="72.0" fitWidth="79.0" onMouseClicked="#exitTypePressed" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/Icons/emergency.png" />
-                     </image>
-                  </ImageView>
-                  <JFXButton contentDisplay="TOP">
+                  <JFXButton contentDisplay="TOP" scaleX="0.75" scaleY="0.75" text="Filter" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                      <graphic>
-                        <ImageView fitHeight="72.0" fitWidth="79.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/Icons/nearMe.png" />
+                              <Image url="@../images/Icons/filterWhite.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
+                  <JFXButton contentDisplay="TOP" scaleX="0.75" scaleY="0.75" text="Near Me" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/Icons/nearMeWhite.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
+                  <JFXButton fx:id="btndirection" contentDisplay="TOP" onAction="#directionPressed" scaleX="0.75" scaleY="0.75" text="Navigation" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/Icons/navigationWhite.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
+                  <JFXButton fx:id="questionButton" contentDisplay="TOP" onAction="#questionPressed" scaleX="0.75" scaleY="0.75" text="Help" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/Icons/helpWhite.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
+                  <JFXButton fx:id="ebtn" contentDisplay="TOP" onAction="#exitTypePressed" scaleX="0.75" scaleY="0.75" text="Emergency" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/Icons/emergencyWhite.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
+                  <JFXButton fx:id="btnlogin" contentDisplay="TOP" onAction="#loginPressed" scaleX="0.75" scaleY="0.75" text="Login" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/Icons/lockWhite.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -204,17 +210,25 @@
                 <RowConstraints minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <ImageView fitHeight="45.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/Icons/circleZoomOut.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="btnzin" fitHeight="45.0" fitWidth="45.0" onMouseClicked="#zinPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <image>
-                        <Image url="@../images/Icons/circleZoomIn.png" />
-                     </image>
-                  </ImageView>
                   <JFXSlider fx:id="slideBarZoom" blockIncrement="0.0" disable="true" max="1.8" min="0.2" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="150.0" prefWidth="45.0" rotate="90.0" value="1.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <JFXButton fx:id="btnzout" contentDisplay="CENTER" minHeight="-Infinity" minWidth="-Infinity" onAction="#zoutPressed" prefHeight="45.0" prefWidth="45.0" text=" " GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="75.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" scaleX="0.5" scaleY="0.5">
+                           <image>
+                              <Image url="@../images/Icons/circleZoomOutWhite.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
+                  <JFXButton fx:id="btnzin" contentDisplay="CENTER" minHeight="-Infinity" minWidth="-Infinity" onAction="#zinPressed" prefHeight="45.0" prefWidth="45.0" text=" " GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="75.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" scaleX="0.5" scaleY="0.5">
+                           <image>
+                              <Image url="@../images/Icons/circleZoomInWhite.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
                </children>
             </GridPane>
          </children></AnchorPane>
