--- a/src/fxml/Path.fxml
+++ b/src/fxml/Path.fxml
@@ -80,6 +80,11 @@
                         <Font size="20.0" />
                      </font>
                   </JFXButton>
+                  <JFXButton fx:id="btnClear" layoutX="8.0" layoutY="540.0" onAction="#clearPressed" prefHeight="61.0" prefWidth="106.0" text="Clear">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </JFXButton>
                </children>
             </AnchorPane>
          </children>
