--- a/src/fxml/SceneStyle.css
+++ b/src/fxml/SceneStyle.css
@@ -76,9 +76,20 @@
 .list-pane{
     -fx-background-color: rgb(40,40,60);
 }
+.axis-label{
+    -fx-text-fill: black;
+}
 
 .list-view:focused .list-cell:filled:focused:selected {
     -fx-background-color: rgb(163,235,255);
     -fx-background: -fx-accent;
     -fx-text-fill: rgb(00,00,00);
+}
+
+.chart-legend {
+    -fx-background-color: yellow;
+}
+
+.chart-legend-item{
+    -fx-text-fill: black;
 }
