--- a/src/fxml/Feedback.fxml
+++ b/src/fxml/Feedback.fxml
@@ -3,13 +3,10 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXSlider?>
 <?import com.jfoenix.controls.JFXTabPane?>
-<?import com.jfoenix.controls.JFXTextArea?>
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -17,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.151" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FeedbackController">
+<AnchorPane fx:id="mainAnchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="800.0" styleClass="pane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.FeedbackController">
     <children>
         <JFXTabPane tabMinHeight="70.0" tabMinWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <tabs>
@@ -39,16 +36,16 @@
                                     <children>
                                         <VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                             <children>
-                                                <Label alignment="CENTER" prefHeight="47.0" prefWidth="201.0" text="Feedback" textFill="#e4e4e4">
+                                                <Label alignment="CENTER" prefHeight="20.0" prefWidth="210.0" styleClass="credit-text" text="  Feedback  " textFill="#e4e4e4">
                                                     <font>
                                                         <Font size="39.0" />
                                                     </font>
-                                                    <padding>
-                                                        <Insets bottom="40.0" />
-                                                    </padding>
                                                 </Label>
-                                                <JFXSlider fx:id="starSlider" majorTickUnit="1.0" max="5.0" minorTickCount="0" prefWidth="200.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
-                                                <Label text="Additional Comments">
+                                                <JFXSlider fx:id="starSlider" majorTickUnit="1.0" max="5.0" minorTickCount="0" prefWidth="200.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" styleClass="credit-text">
+                                       <VBox.margin>
+                                          <Insets top="20.0" />
+                                       </VBox.margin></JFXSlider>
+                                                <Label styleClass="credit-text" text="  Additional Comments  ">
                                                     <font>
                                                         <Font size="18.0" />
                                                     </font>
@@ -108,7 +105,7 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
                             </rowConstraints>
                             <children>
-                                <Label alignment="CENTER" text="Credits" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                                <Label alignment="CENTER" styleClass="credit-text" text="  Credits  " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                                     <font>
                                         <Font name="System Bold" size="29.0" />
                                     </font>
@@ -116,101 +113,101 @@
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin>
                                 </Label>
-                                <Label alignment="CENTER" layoutX="381.0" layoutY="9.0" text="WPI Computer Science Department" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                <Label alignment="CENTER" layoutX="381.0" layoutY="9.0" styleClass="credit-text" text="  WPI Computer Science Department  " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                                     <font>
                                         <Font size="21.0" />
                                     </font>
                                     <GridPane.margin>
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin></Label>
-                                <Label alignment="CENTER" layoutX="312.0" layoutY="38.0" prefHeight="19.0" prefWidth="210.0" text="CS 3733 Software Engineering " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-                                <Label alignment="BOTTOM_CENTER" layoutX="312.0" layoutY="63.0" text="Professor Wilson Wong" textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="BOTTOM">
+                                <Label alignment="CENTER" layoutX="312.0" layoutY="38.0" prefHeight="19.0" prefWidth="220.0" styleClass="credit-text" text="  CS 3733 Software Engineering   " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                                <Label alignment="BOTTOM_CENTER" layoutX="312.0" layoutY="63.0" styleClass="credit-text" text="  Professor Wilson Wong  " textAlignment="CENTER" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="BOTTOM">
                                     <GridPane.margin>
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin>
                                     <font>
                                         <Font size="17.0" />
                                     </font></Label>
-                                <Label alignment="CENTER" layoutX="312.0" layoutY="81.0" text="Meghana Bhatia : Documentation Analyst" textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
+                                <Label alignment="CENTER" layoutX="312.0" layoutY="81.0" styleClass="credit-text" text="  Meghana Bhatia : Documentation Analyst  " textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
                                     <GridPane.margin>
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin>
                                     <font>
                                         <Font size="17.0" />
                                     </font></Label>
-                                <Label alignment="CENTER" layoutX="312.0" layoutY="104.0" text="Leo Grande : Project Manager" textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="9">
+                                <Label alignment="CENTER" layoutX="312.0" layoutY="104.0" styleClass="credit-text" text="  Leo Grande : Project Manager  " textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="9">
                                     <GridPane.margin>
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin>
                                     <font>
                                         <Font size="17.0" />
                                     </font></Label>
-                                <Label alignment="CENTER" layoutX="312.0" layoutY="122.0" text="Nick Fajardo : Assistant Lead Engineer" textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="8">
+                                <Label alignment="CENTER" layoutX="312.0" layoutY="122.0" styleClass="credit-text" text="  Nick Fajardo : Assistant Lead Engineer  " textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="8">
                                     <GridPane.margin>
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin>
                                     <font>
                                         <Font size="17.0" />
                                     </font></Label>
-                                <Label alignment="CENTER" text="William Mosby (Vojta) : Lead Developer Engineer " textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="10">
+                                <Label alignment="CENTER" styleClass="credit-text" text="  William Mosby (Vojta) : Lead Developer Engineer  " textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="10">
                                     <GridPane.margin>
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin>
                                     <font>
                                         <Font size="17.0" />
                                     </font></Label>
-                                <Label alignment="CENTER" layoutX="276.0" layoutY="166.0" text="Travis Norris : Assitant Lead Engineer " textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="11">
+                                <Label alignment="CENTER" layoutX="276.0" layoutY="166.0" styleClass="credit-text" text="  Travis Norris : Assitant Lead Engineer  " textAlignment="CENTER" GridPane.halignment="RIGHT" GridPane.rowIndex="11">
                                     <GridPane.margin>
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin>
                                     <font>
                                         <Font size="17.0" />
                                     </font></Label>
-                                <Label alignment="CENTER" layoutX="308.0" layoutY="188.0" text="Jack Palmstrom : Database Engineer " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="8">
+                                <Label alignment="CENTER" layoutX="308.0" layoutY="188.0" styleClass="credit-text" text="  Jack Palmstrom : Database Engineer  " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="8">
                                     <GridPane.margin>
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin>
                                     <font>
                                         <Font size="17.0" />
                                     </font></Label>
-                                <Label alignment="CENTER" layoutX="310.0" layoutY="210.0" text="Andrey Yuzvik : Product Owner" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="11">
+                                <Label alignment="CENTER" layoutX="310.0" layoutY="210.0" styleClass="credit-text" text="  Andrey Yuzvik : Product Owner  " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="11">
                                     <GridPane.margin>
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin>
                                     <font>
                                         <Font size="17.0" />
                                     </font></Label>
-                                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="321.0" layoutY="232.0" text="Oluchukwu Okafor (Chima) : Test Engineer " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="7">
+                                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="321.0" layoutY="232.0" styleClass="credit-text" text="  Oluchukwu Okafor (Chima) : Test Engineer  " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="7">
                                     <GridPane.margin>
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin>
                                     <font>
                                         <Font size="16.0" />
                                     </font></Label>
-                                <Label alignment="CENTER" layoutX="296.0" layoutY="254.0" text="Erika Snow : Software Engineer " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="10">
+                                <Label alignment="CENTER" layoutX="296.0" layoutY="254.0" styleClass="credit-text" text="  Erika Snow : Software Engineer  " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="10">
                                     <GridPane.margin>
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin>
                                     <font>
                                         <Font size="17.0" />
                                     </font></Label>
-                                <Label alignment="CENTER" layoutX="323.0" layoutY="276.0" text="Tyrone Patterson : Software Engineer " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="9">
+                                <Label alignment="CENTER" layoutX="323.0" layoutY="276.0" styleClass="credit-text" text="  Tyrone Patterson : Software Engineer  " textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="9">
                                     <GridPane.margin>
                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                     </GridPane.margin>
                                     <font>
                                         <Font size="17.0" />
                                     </font></Label>
-                                <Label text="Special Thanks To:" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="13">
+                                <Label styleClass="credit-text" text="  Special Thanks To:  " GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="13">
                                     <font>
                                         <Font name="System Bold Italic" size="14.0" />
                                     </font>
                                 </Label>
-                                <Label contentDisplay="CENTER" text="Andrew Shinn" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="14">
+                                <Label contentDisplay="CENTER" styleClass="credit-text" text="  Andrew Shinn  " GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="14">
                                     <font>
                                         <Font size="17.0" />
                                     </font></Label>
-                                <Label text="Brigham &amp; Women's Faulkner Hospital " GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="15">
+                                <Label styleClass="credit-text" text="  Brigham &amp; Women's Faulkner Hospital  " GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="15">
                                     <font>
                                         <Font size="17.0" />
                                     </font></Label>
@@ -220,7 +217,7 @@
                 </Tab>
             </tabs>
         </JFXTabPane>
-        <JFXButton fx:id="returnButton" onAction="#returnPressed" prefHeight="50.0" prefWidth="150.0" text="Return" AnchorPane.rightAnchor="120.0" AnchorPane.topAnchor="10.0">
+        <JFXButton fx:id="returnButton" onAction="#returnPressed" prefHeight="50.0" prefWidth="150.0" text="Return" AnchorPane.rightAnchor="120.0" AnchorPane.topAnchor="5.0">
             <font>
                 <Font size="26.0" />
             </font>
