--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -15,17 +15,17 @@
       <AnchorPane fx:id="mainAnchorPane" layoutX="-5.0" minHeight="400.0" minWidth="800.0" styleClass="pane">
          <children>
             <StackPane AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="90.0" />
-            <GridPane fx:id="menuGridPane" layoutX="10.0" layoutY="190.0" prefHeight="480.0" prefWidth="85.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0">
+            <GridPane fx:id="menuGridPane" layoutX="10.0" layoutY="190.0" maxHeight="700.0" prefWidth="85.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="115.0" vgrow="NEVER" />
+                  <RowConstraints minHeight="10.0" prefHeight="115.0" vgrow="NEVER" />
+                  <RowConstraints minHeight="10.0" prefHeight="115.0" vgrow="NEVER" />
+                  <RowConstraints minHeight="10.0" prefHeight="115.0" vgrow="NEVER" />
+                <RowConstraints minHeight="10.0" prefHeight="115.0" vgrow="NEVER" />
+                <RowConstraints minHeight="10.0" prefHeight="115.0" vgrow="NEVER" />
               </rowConstraints>
                <children>
                   <JFXButton fx:id="filterHeaderButton" contentDisplay="TOP" scaleX="0.75" scaleY="0.75" text="Filter" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
