--- a/src/fxml/Request.fxml
+++ b/src/fxml/Request.fxml
@@ -5,7 +5,7 @@
 <?import com.jfoenix.controls.JFXListView?>
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import com.jfoenix.controls.JFXTextField?>
-
+<?import com.jfoenix.controls.JFXTimePicker?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -19,8 +19,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<?import com.jfoenix.controls.JFXTimePicker?>
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="800.0" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #005697;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RequestController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="800.0" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #879DA3;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RequestController">
    <children>
       <GridPane layoutX="456.0" layoutY="303.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
@@ -90,20 +89,20 @@
                                           <Font size="24.0" />
                                        </font>
                                     </Label>
-                                    <JFXButton fx:id="btncreate" onAction="#requestCreatePressed" prefHeight="50.0" prefWidth="150.0" text="Create" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+                                    <JFXButton fx:id="btncreate" onAction="#requestCreatePressed" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Create" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6">
                                        <GridPane.margin>
                                           <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
                                        </GridPane.margin></JFXButton>
-                                    <JFXButton fx:id="btncancel" onAction="#cancelPressed" prefHeight="50.0" prefWidth="150.0" text="Cancel" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+                                    <JFXButton fx:id="btncancel" onAction="#cancelPressed" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Cancel" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
                                        <GridPane.margin>
                                           <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
                                        </GridPane.margin></JFXButton>
 
-                                    <JFXDatePicker fx:id="dateMenu" defaultColor="#64fff0" prefWidth="150.0" style="-fx: #ffffff;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                                    <JFXDatePicker fx:id="dateMenu" defaultColor="#eaa119" prefWidth="150.0" style="-fx: #ffffff;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                                     <ChoiceBox fx:id="locationChoiceBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
                                     <ChoiceBox fx:id="choiceBoxService" prefWidth="150.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
                                     <ChoiceBox fx:id="choiceBoxStaff" prefWidth="150.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-                                    <JFXTimePicker fx:id="timeMenu" defaultColor="#34f8e4" prefWidth="150.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                                    <JFXTimePicker fx:id="timeMenu" defaultColor="#eba119" prefWidth="150.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
 
 
                                     <AnchorPane fx:id="servicePane1" prefHeight="150.0" prefWidth="1279.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
@@ -144,7 +143,7 @@
                                                    <font>
                                                       <Font size="24.0" />
                                                    </font></Label>
-                                                <JFXButton fx:id="btncreate1" onAction="#resolveServicePressed" prefHeight="50.0" prefWidth="150.0" text="Resolve" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+                                                <JFXButton fx:id="btncreate1" onAction="#resolveServicePressed" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Resolve" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="5">
                                                    <GridPane.margin>
                                                       <Insets left="20.0" right="20.0" />
                                                    </GridPane.margin></JFXButton>
@@ -180,7 +179,7 @@
                   </Tab>
                   <Tab text="Settings">
                     <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="blue-anchor">
                            <children>
                               <GridPane layoutX="292.0" layoutY="188.0" prefHeight="622.4" prefWidth="950.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columnConstraints>
@@ -203,7 +202,7 @@
                                        </font>
                                     </Label>
                                     <ChoiceBox fx:id="searchStrategyChoice" prefHeight="40.0" prefWidth="197.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-                                    <JFXButton fx:id="saveSettingsButton" onAction="#saveSettingsPressed" text="Save" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                                    <JFXButton fx:id="saveSettingsButton" onAction="#saveSettingsPressed" styleClass="grey-button" text="Save" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3">
 
                                        <font>
                                           <Font size="20.0" />
@@ -222,13 +221,13 @@
                   </Tab>
                   <Tab text="Staff Management">
                     <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="b;ue-anchor">
                            <children>
                               <JFXTabPane layoutX="364.0" layoutY="174.0" prefHeight="597.6" prefWidth="1279.2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <tabs>
                                     <Tab text="Add Staff">
                                       <content>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="blue-anchor">
                                              <children>
                                                 <GridPane prefHeight="562.4" prefWidth="1279.2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                   <columnConstraints>
@@ -264,8 +263,8 @@
                                                             <Font size="24.0" />
                                                          </font>
                                                       </JFXTextField>
-                                                      <JFXButton fx:id="createStaffButton" onAction="#createStaffPressed" prefHeight="50.0" prefWidth="150.0" text="Create" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
-                                                      <JFXButton fx:id="cancelStaffButton" onAction="#cancelStaffPressed" prefHeight="50.0" prefWidth="150.0" text="Cancel" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                                                      <JFXButton fx:id="createStaffButton" onAction="#createStaffPressed" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Create" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                                                      <JFXButton fx:id="cancelStaffButton" onAction="#cancelStaffPressed" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Cancel" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
                                                       <ChoiceBox fx:id="addStaffServiceChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                                                          <GridPane.margin>
                                                             <Insets top="25.0" />
@@ -291,7 +290,7 @@
                                              <children>
                                                 <SplitPane dividerPositions="0.28499843407453807" prefHeight="562.4" prefWidth="1279.2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                   <items>
-                                                    <AnchorPane maxWidth="300.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #008faa;">
+                                                    <AnchorPane maxWidth="300.0" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="blue-anchor">
                                                          <children>
                                                             <GridPane prefHeight="560.8" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                                <columnConstraints>
@@ -313,7 +312,7 @@
                                                                         <Font size="24.0" />
                                                                      </font>
                                                                   </JFXTextField>
-                                                                  <JFXButton fx:id="removeStaffBtn" onAction="#removeStaffPressed" prefHeight="50.0" prefWidth="150.0" text="Remove Staff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                                                                  <JFXButton fx:id="removeStaffBtn" onAction="#removeStaffPressed" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Remove Staff" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3">
                                                                      <GridPane.margin>
                                                                         <Insets left="20.0" right="20.0" />
                                                                      </GridPane.margin>
@@ -335,7 +334,7 @@
                                                       </AnchorPane>
                                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                                          <children>
-                                                            <ListView fx:id="staffListView" layoutX="270.0" layoutY="109.0" prefHeight="560.8" prefWidth="971.2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                            <ListView fx:id="staffListView" layoutX="270.0" layoutY="109.0" prefHeight="560.8" prefWidth="971.2" styleClass="remove-list" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                                          </children>
                                                       </AnchorPane>
                                                   </items>
@@ -346,7 +345,7 @@
                                     </Tab>
                                     <Tab text="Edit Staff">
                                       <content>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="blue-anchor">
                                              <children>
                                                 <GridPane prefHeight="562.4" prefWidth="1279.2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                   <columnConstraints>
@@ -388,8 +387,8 @@
                                                          </GridPane.margin>
                                                       </JFXTextField>
                                                       <ChoiceBox fx:id="choiceboxModifyStaff" prefWidth="150.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-                                                      <JFXButton fx:id="searchButton" onAction="#searchbuttonPressed" prefHeight="50.0" prefWidth="150.0" text="Search" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-                                                      <JFXButton fx:id="makeEditsModify" onAction="#makeModify" prefHeight="50.0" prefWidth="150.0" text="Modify" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                                                      <JFXButton fx:id="searchButton" onAction="#searchbuttonPressed" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Search" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                                                      <JFXButton fx:id="makeEditsModify" onAction="#makeModify" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Modify" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
                                                    </children>
                                                 </GridPane>
                                              </children>
@@ -427,12 +426,12 @@
                                           <Font size="24.0" />
                                        </font>
                                     </Label>
-                                    <JFXButton fx:id="createAPIbtn" onAction="#createPressedApi" prefHeight="50.0" prefWidth="150.0" text="Create" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                    <JFXButton fx:id="createAPIbtn" onAction="#createPressedApi" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Create" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                                        <GridPane.margin>
                                           <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
                                        </GridPane.margin>
                                     </JFXButton>
-                                    <JFXButton fx:id="cancelAPIbtn" onAction="#cancelPressedAPI" prefHeight="50.0" prefWidth="150.0" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                    <JFXButton fx:id="cancelAPIbtn" onAction="#cancelPressedAPI" prefHeight="50.0" prefWidth="150.0" styleClass="grey-button" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                                        <GridPane.margin>
                                           <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
                                        </GridPane.margin>
